--- a/output.css
+++ b/output.css
@@ -45,8 +45,24 @@ h4:hover {
 }
 
 footer {
-  background-color: aqua;
-  height: 30px;
+  position: fixed;
+  bottom: 0px;
+  background-color: black;
+  height: 35px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+footer a {
+  color: white;
+  text-decoration: none;
+  padding: 3px 10px;
+}
+footer a:hover {
+  cursor: pointer;
+  border: 2px solid white;
+  border-radius: 5px;
 }
 
 /*# sourceMappingURL=output.css.map */
